--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
+    "redux": "^5.0.1",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
@@ -23,9 +27,12 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-react-swc": "^3.6.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-mkcert": "^1.17.5"
